--- a/SEA_Application/Views/AspNetUser/StudentsIndex.cshtml
+++ b/SEA_Application/Views/AspNetUser/StudentsIndex.cshtml
@@ -54,7 +54,7 @@
 
                     table.fnClearTable();
                     $.each(data, function (i, item) {
-                        table.fnAddData([item.UserName + "<input type=hidden value="+ item.Id +">", item.Name, item.Email, item.PhoneNumber, item.ClassName]);
+                        table.fnAddData([item.UserName , item.Name, item.Email, item.PhoneNumber, item.ClassName]);
                     });
                     table.fnDraw();
                     $('.eeniart0017').css("display", "none");
@@ -63,13 +63,15 @@
            });
 
 
-      $('.table').on('click', 'tbody tr', function() {
-          //  var td = $(this).children("td");
+  
 
-       
-         //   if ($(td).html() != "No data available in table");
+          $('.table').on('click', 'tbody tr', function() {
+            var td = $(this).children("td");
 
-         //   window.location.href = "StudentDetail?userName=" + $(td[1]).html();
+             // alert( $(td[0]).html());
+            if ($(td).html() != "No data available in table");
+
+            window.location.href = "StudentDetail?userName=" + $(td[0]).html();
 
       });
 
