--- a/SEA_Application/Views/AspnetQuizs/Edit.cshtml
+++ b/SEA_Application/Views/AspnetQuizs/Edit.cshtml
@@ -13,17 +13,6 @@
         //    window.location.href = "/AspnetQuizs/Index";
         //})
 
-        
-        $("#btnCancel").click(function () {
-
-            window.location.href = "/AspnetQuestions/ViewQuestionAndQuiz";
-        })
-        
-        $("#PageHeader").html("Edit Quiz");
-
-        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
-        $("#BreadCrumbs").append(' <li> <a href="/AspnetQuestions/ViewQuestionAndQuiz">Question & Quiz </a> <span>&gt;</span></li>');
-        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Edit</a></li>');
 
         var course = 'CSS';
 
@@ -178,63 +167,61 @@
     })
 </script>
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-body p-5">
 
 
-                @using (Html.BeginForm())
-                {
-                    @Html.AntiForgeryToken()
 
-                <div class="col-md-6 pl-5 pr-5  border-color-sea">
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <div class="box box-primary">
+        <div class="box-title"></div>
 
+        <div class="box-body">
+            <div class="form-horizontal">
+                <h4>AspnetQuiz</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.Id)
 
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.Id)
-
-                    <div class="form-group bmd-form-group my-3">
-                        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "bmd-label-floating" })
-
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = true } })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-6">
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-
                     </div>
+                </div>
 
-                    <div class="form-group bmd-form-group my-3">
-                        @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "bmd-label-floating" })
-
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-6">
                         @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-
                     </div>
+                </div>
 
-                    <div class="form-group">
-
-                        <label class="control-label">Start Date</label>
-
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Start_Date, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-6">
 
                         <input class="form-control" type="date" name="Start_Date" value="@ViewBag.StartDate" />
                         @Html.ValidationMessageFor(model => model.Start_Date, "", new { @class = "text-danger" })
-
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @*@Html.LabelFor(model => model.Due_Date, htmlAttributes: new { @class = "control-label" })*@
-
-                        <label class="control-label">Due Date</label>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Due_Date, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-6">
                         <input type="date" class="form-control" name="Due_Date" value="@ViewBag.DueDate" />
 
                         @Html.ValidationMessageFor(model => model.Due_Date, "", new { @class = "text-danger" })
-
                     </div>
+                </div>
 
-                    <div class="form-group">
-
-                        <label class="control-label">Course Type <span class="text-danger">*</span></label>
-
-
+                <div class="form-group">
+                    <div class="col-md-2">
+                        <label>Course Type <span class="text-danger">*</span></label>
+                    </div>
+                    <div class="col-md-6">
 
                         @Html.DropDownList("CTId", new List<SelectListItem>
                           {
@@ -245,76 +232,66 @@
 
                            }, htmlAttributes: new { @class = "form-control", @required = true })
 
-
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        <label class="control-label">Subject</label>
-
+                <div class="form-group">
+                    <label class="col-md-2">Subject</label>
+                    <div class="col-md-6">
                         @Html.DropDownList("SubjectId", null, htmlAttributes: new { @class = "form-control", @required = true })
 
-
                     </div>
                 </div>
 
 
-                    <div class="form-group">
+                <div class="form-group">
 
-                        <div class="col-md-12">
+                    <div class="col-md-12">
 
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="box box-primary">
-                                        <div class="box-header with-border"><h3 class="orange">Topics:<span class="red-mark">*</span></h3></div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="box box-primary">
+                                    <div class="box-header with-border"><h3 class="orange">Topics:<span class="red-mark">*</span></h3></div>
 
 
-                                        <div class="box-body">
-                                            @Html.ListBox("TopicId", null, htmlAttributes: new { @required = true, @class = "form-control", @style = "height:400px;" })
-                                        </div>
+                                    <div class="box-body">
+                                        @Html.ListBox("TopicId", null, htmlAttributes: new { @required = true, @class = "form-control", @style = "height:400px;" })
                                     </div>
                                 </div>
-
-
-                                <div class="col-md-6">
-                                    <div class="box box-primary">
-                                        <div class="box-header with-border"><h3 class="orange">Questions:<span class="red-mark">*</span></h3></div>
-
-                                        <div class="box-body">
-                                            @Html.ListBox("QuestionID", null, htmlAttributes: new { @required = true, @class = "form-control", @style = "height:400px;" })
-
-                                        </div>
-                                    </div>
-                                </div>
-
-                                @*<div class="form-group">
-                        <div class="col-md-offset-1 col-md-10">
-                            <button type="button" id="edit" class="btn btn-primary" onclick="redirectToEdit()">Edit</button>
-
-                        </div>
-                    </div>*@
-
-                                @*<div class="form-group">
-                        <div class="col-md-offset-2 col-md-6">
-                            <input type="submit" value="Save" class="btn btn-default" />
-                        </div>
-                    </div>*@
-
                             </div>
+
+
+                            <div class="col-md-6">
+                                <div class="box box-primary">
+                                    <div class="box-header with-border"><h3 class="orange">Questions:<span class="red-mark">*</span></h3></div>
+
+                                    <div class="box-body">
+                                        @Html.ListBox("QuestionID", null, htmlAttributes: new { @required = true, @class = "form-control", @style = "height:400px;" })
+
+                                    </div>
+                                </div>
+                            </div>
+
+                            @*<div class="form-group">
+                                    <div class="col-md-offset-1 col-md-10">
+                                        <button type="button" id="edit" class="btn btn-primary" onclick="redirectToEdit()">Edit</button>
+
+                                    </div>
+                                </div>*@
+
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-6">
+                                    <input type="submit" value="Save" class="btn btn-default" />
+                                </div>
+                            </div>
+
                         </div>
                     </div>
-
-                    <br>
-                    <hr class="mt-5 mb-4">
-
-                    <button type="submit" class="btn btn-primary pull-right rounded rounded-lg"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Save &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </button>
-                    <button type="button" id="btnCancel" class="btn btn-primary pull-right rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
-                        <i class="material-icons mr-2">cached</i>  Cancel &nbsp; &nbsp;
-                    </button>
-                    <div class="clearfix"></div>
-
-
-                    }
                 </div>
-                </div>
+
+            </div>
+
+        </div>
     </div>
-</div>
+
+}
