--- a/SEA_Application/Views/AspnetSubjectTopics/Edit.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/Edit.cshtml
@@ -34,18 +34,6 @@
             window.location.href = "/AspnetSubjectTopics/Index";
         })
 
-                $("#PageHeader").html("Edit Topic");
-
-        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
-        $("#BreadCrumbs").append(' <li> <a href="/AspnetSubjectTopics/ViewTopicsAndLessons"> Topic </a> <span>&gt;</span></li>');
-        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Edit</a></li>');
-
-        
-        $("#btnCancel").click(function () {
-
-            window.location.href = "/AspnetSubjectTopics/ViewTopicsAndLessons";
-        })
-
 
         var course = 'CSS';
         var Class;
@@ -133,42 +121,36 @@
 
 </script>
 
-@*<div class="box-header with-border"><h3 class="orange">Edit Topic<span class="red-mark">*</span></h3></div>*@
-
-<div class="row">
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-body p-5">
-
-                @using (Html.BeginForm())
-                {
-                    @Html.AntiForgeryToken()
-
-                    <div class="col-md-8 pl-5 pr-5 ">
+<div class="box-header with-border"><h3 class="orange">Edit Topic<span class="red-mark">*</span></h3></div>
 
 
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <div class="box box-primary">
+        <div class="form-horizontal">
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-6">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = true } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-6">
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
 
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        @Html.HiddenFor(model => model.Id)
-                        <div class="form-group bmd-form-group is-filled">
-                            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "bmd-label-floating" })
-
-                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = true } })
-                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-
-                        </div>
-
-                        <div class="form-group bmd-form-group is-filled">
-                            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "bmd-label-floating" })
-
-                            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-
-                        </div>
-
-
-                        @*<div class="form-group">
+            @*<div class="form-group">
                     <label class="col-md-2 col-lg-2 control-label"> Section:<span class="red-mark">*</span></label>
                     <div class="col-md-6">
                         @Html.DropDownList("ClassID", null, htmlAttributes: new { @class = "form-control text_box_style", @required = true })
@@ -178,73 +160,48 @@
 
                 </div>*@
 
-
-                        <div class="form-row mt-4">
-                            <div class="form-group col-md-12 bmd-form-group">
-                                <label class="bmd-label-static pl-2">Course Type <span class="text-danger">*</span></label>
-
-
-
-                                @Html.DropDownList("CTId", new List<SelectListItem>
-                                  {
-
-                                new SelectListItem{ Text="Select One", Value = "" },
-                                   new SelectListItem{ Text="CSS", Value = "CSS" },
-                                  new SelectListItem{ Text="PMS", Value = "PMS" },
-
-                                   }, htmlAttributes: new { @class = "form-control", @required = true })
-
-
-                            </div>
-                        </div>
-
-
-                        <div class="form-row mt-4">
-                            <div class="form-group col-md-12 bmd-form-group">
-                                @Html.LabelFor(model => model.SubjectId, "SubjectId", htmlAttributes: new { @class = "bmd-label-static pl-2" })
-
-                                @Html.DropDownList("SubjectId", null, htmlAttributes: new { @class = "form-control", @required = true })
-                                @Html.ValidationMessageFor(model => model.SubjectId, "", new { @class = "text-danger" })
-
-                            </div>
-                        </div>
-
-
-
-
-                        @*<div class="form-group">
-                    @Html.LabelFor(model => model.FAQ, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-6">
-                        @Html.TextAreaFor(model => model.FAQ, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.FAQ, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
-
-                        @*<div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
-                    </div>
-                </div>*@
-
-
-
-
-                    </div> <!--end column-->
-                    <br>
-
-
-                    <div class="col-md-8 pl-5 pr-5 ">
-                        <button type="submit" class="btn btn-primary rounded rounded-lg"> Update </button>
-
-
-                        <button type="button" id="btnCancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
-                            <i class="material-icons mr-2">cached</i>  Cancel
-                        </button>
-
-                    </div>
-
-                }
-            </div>
+            <div class="form-group">
+                <div class="col-md-2">
+                    <label>Course Type <span class="text-danger">*</span></label>
                 </div>
+                <div class="col-md-6">
+
+                    @Html.DropDownList("CTId", new List<SelectListItem>
+                      {
+
+                    new SelectListItem{ Text="Select One", Value = "" },
+                       new SelectListItem{ Text="CSS", Value = "CSS" },
+                      new SelectListItem{ Text="PMS", Value = "PMS" },
+
+                       }, htmlAttributes: new { @class = "form-control", @required = true })
+
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.SubjectId, "SubjectId", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-6">
+                    @Html.DropDownList("SubjectId", null, htmlAttributes: new { @class = "form-control", @required = true })
+                    @Html.ValidationMessageFor(model => model.SubjectId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.FAQ, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-6">
+                    @Html.TextAreaFor(model => model.FAQ, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FAQ, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
+
+
     </div>
-</div>
+}
