--- a/SEA_Application/Views/StudentAssignmentSubmitted/StudentLessonTracking.cshtml
+++ b/SEA_Application/Views/StudentAssignmentSubmitted/StudentLessonTracking.cshtml
@@ -2,53 +2,12 @@
 
 @{
     ViewBag.Title = "StudentLessonTracking";
-    Layout = "~/Views/Shared/_TeacherDashboardLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 
 <script>
     $(document).ready(function () {
-
-        
-                   $("#PageHeader").html("Lesson Tracking");
-
-            $("#BreadCrumbs").append(' <li> <a href="#"> Home </a> <span>&gt;</span></li>');
-            $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Lesson Tracking </a></li>');
-
-             var   table = $('#datatable').dataTable({
-                buttons: [
-                    {
-                        text: '<span class="datatableButtonsReset"> <img src="/Content/assets/assets/icons/Icon-Reset2.png" alt=""> Reset</span>'
-                    },
-                    {
-                        text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Create</span>',
-                        action: function (e, dt, button, config) {
-                            window.location.href = '';
-                        }
-                    },
-                    {
-                        text: '<span class="datatableButtonsDownload"> <img src="/Content/assets/assets/icons/Icon-download.png" alt=""> Download</span>'
-                    }
-                ],
-                "language": {
-                    "lengthMenu": "<div class=\"d-flex showEntriesCon\">\n" +
-                        "  <div class=\"p-2\">Show </div> <div class=\"showEntries\"> _MENU_\n" +
-                        "  </div>\n" +
-                        "  </div>",
-                    "info": "<div class='showingEntriesOfTotal'>Showing <span class=\"text-info\">_START_ to _END_</span> of _TOTAL_ entries</div>",
-                    "paginate": {
-                        "first": "Firstt",
-                        "last": "Lastt",
-                        "next": ' <img src="~/Content/assets/assets/icons/Arrow2.png" alt=""> ',
-                        "previous": ' <img src="~/Content/assets/assets/icons/Arrow1.png" alt=""> '
-                    }
-                },
-                "searching": true,
-                // dom: '<"class">Blfrtip',
-                dom: "<'row mb-3'<'col-sm-12 col-md-2 col-lg-2'l><'col-sm-12 col-md-10 col-lg-10 datatableButtonsCon text-right'Bf>>" +
-                    "<'row'<'col-sm-12 datatablesData'tr>>" +
-                    "<'row mt-4'<'col-sm-12 col-md-4 col-lg-6 infoCon'i><'col-sm-12 col-md-8 col-lg-6 pagCon'p>>",
-               });
-        //$("#example").dataTable();
+        $("#example").dataTable();
 
         //$('.table').on('click', 'tbody tr', function () {
 
@@ -106,75 +65,66 @@
 
 </script>
 
-<div class="card">
-    <div class="card-body p-4">
-        <div class="box box-primary">
-            <div class="box-body">
-                <div class="box-title"></div>
+<h4 class="orange">&nbsp;Student Lesson &nbsp;</h4>
+<div class="box box-primary">
+    <div class="box-body">
+        <div class="box-title"></div>
+        <table class="table table-striped table-bordered" id="example">
 
-                <div class="table-responsive">
+            <thead>
 
-                    <table class="table hover table-striped table-bordered" id="datatable">
+                <tr>
 
-                        <thead>
-
-                            <tr>
-
-                                <th>
-                                    @Html.DisplayNameFor(model => model.AspNetUser.Name)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.IsCompleted)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Assignment_Status)
-                                </th>
-                                <th>
-                                    <span>Lesson Name</span>
-                                </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.AspNetUser.Name)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.IsCompleted)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Assignment_Status)
+                    </th>
+                    <th>
+                        <span>Lesson Name</span>
+                    </th>
 
 
-                            </tr>
-                        </thead>
+                </tr>
+            </thead>
 
-                        <tbody>
+            <tbody>
 
-                            @foreach (var item in Model)
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AspNetUser.Name)
+                        </td>
+                        <td>
+
+                            @if (item.IsCompleted == true)
                             {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.AspNetUser.Name)
-                                    </td>
-                                    <td>
-
-                                        @if (item.IsCompleted == true)
-                                        {
-                                            <span>Completed</span>
-                                        }
-                                        else
-                                        {
-                                            <span>No</span>
-
-                                        }
-
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Assignment_Status)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.AspnetLesson.Name)
-                                    </td>
-
-
-                                </tr>
+                                <span>Completed</span>
                             }
-                        </tbody>
+                            else
+                            {
+                                <span>No</span>
 
-                    </table>
+                            }
 
-                </div>
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Assignment_Status)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.AspnetLesson.Name)
+                        </td>
 
-            </div>
-        </div>
+
+                    </tr>
+                }
+            </tbody>
+
+        </table>
     </div>
 </div>
