Minor bug fixing

--- a/SEA_Application/Views/AspNetUser/StudentsIndex.cshtml
+++ b/SEA_Application/Views/AspNetUser/StudentsIndex.cshtml
@@ -126,7 +126,7 @@
                                                 Phone Number
                                             </th>
                                             <th>
-                                                Session
+                                                Class
                                             </th>
                                         </tr>
                                     </thead>
